2004/02/27 14:38 (-0500) rwmcfa1

	* GenPod.pm: mystery solved, Exporter needed quotes around it in the use
	base call. as to why it died the way it was with "Unknown error" i don't
	yet know, looking into it. use stict is now uncommented, and this issue
	is closed so far as Glib is concerned. 

2004/02/27 13:58 (-0500) rwmcfa1

	* GenPod.pm: use warnings now used. Also turned on strict to get rid of
	all of it's complaints, but even after all of them are gone it dies
	with Unknown error, so use strict is commented out.  lots and lots and 
	lots of warnings fixed, some of which were flat out bugs. one of which 
	was user visible, SEE ALSO's was wrong.

2004/02/27 02:00 (-0500) muppetman

	* Glib.pm, README, NEWS: unstable release 1.037

2004/02/26 10:16 (-0500) muppetman

	* t/1.t: correct the skip count.  bad muppet.

2004/02/26 21:45 (-0500) muppetman

	* README: fix the spelling of license; update the sandbox instructions.

	* GUtils.xs, t/1.t: add more pod than code.  enable, document, and test
	various utility functions (get|set_application_name, get_user_name,
	get_real_name, get_tmp_dir, get_home_dir).

	* Glib.xs: correct the semantics of the boot-time version check

2004/02/26 22:59 (+0100) kaffeetisch

	* GError.xs: Mark 'file' unused to hush compiler warnings.

	* Glib.xs: Remove debug prints.

	* ParseXSDoc.pm: Check if $firstline is defined before accessing
	it to hush some warnings.

2004/02/25 19:28 (-0500) rwmcfa1

	* ParseXSDoc.pm, GenPod.pm, GBoxed.xs, GError.xs, GMainLoop.xs,
	GParamSpec.xs, GType.xs: =pod position=<pos> -> =for position <pos> 
	some pod parsers don't like text after =pod.

2004/02/25 15:21 (-0500) rwmcfa1

	* GObject.xs: use new positioning pod mech. use #if 0 trick to get 
	tie_properties to act like a real method

	* MakeHelper.pm: extra =back removed

	* GBoxed.xs, GError.xs, GMainLoop.xs, GParamSpec.xs, GType.xs: use new 
	positioning pod mech.

	* GenPod.pm, ParseXSDoc.pm: new positioning pod mech put in place
